--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,15 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-# Test binary, built with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
-hackday-meeting-concluder
+# Utilities
+cmd/play/play
+cmd/rec/rec
+cmd/rec2/rec2
 cmd/web/web
+
+# macOS
+.DS_Store
+
+# Various
+*.tmp
+*.bak
+*.out
+*.swp
+include.txt
