--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Utilities
+cmd/audio2text/audio2text
 cmd/play/play
 cmd/rec/rec
-cmd/rec2/rec2
+cmd/slackhello/slackhello
+cmd/wav2mp4/wav2mp4
 cmd/web/web
 
 # macOS
