--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ cmd/play/play
 cmd/rec/rec
 cmd/slackpost/slackpost
 cmd/wav2mp4/wav2mp4
-cmd/web/web
+cmd/restserver/restserver
+cmd/webapp/webapp
 
 # macOS
 .DS_Store
