--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,14 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
         go-version: 1.20
-
+    - name: Fetch dependencies
+      run get get -d ./...
     - name: Build
       run: go build -v ./...
-
     - name: Test
       run: go test -v ./...
