--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         go-version: 1.20
     - name: Fetch dependencies
-      run get get -d ./...
+      run: get get -d ./...
     - name: Build
       run: go build -v ./...
     - name: Test
