--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -16,9 +15,13 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.20
-    - name: Fetch dependencies
-      run: go get -d ./...
+    - name: Get
+      run: go get -d -v
     - name: Build
-      run: go build -v ./...
+      run: go build -v
     - name: Test
-      run: go test -v ./...
+      run: go test -v
+    - name: Get backend
+      run: (cd cmd/backend; go get -d -v)
+    - name: Build backend
+      run: (cd cmd/backend; go build -v)
