--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,14 +10,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.20
-    - name: Build
-      run: go build -v
-    - name: Test
-      run: go test -v
-    - name: Build backend
-      run: (cd cmd/backend; go build -v)
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.20
+      - name: Install dependencies
+        run: go get -v ./...
+      - name: Build
+        run: go build -v
+      - name: Test
+        run: go test -v
+      - name: Build backend
+        run: (cd cmd/backend; go build -v)
