--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,16 +10,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.20
-      - name: Install dependencies
-        run: go get -v ./...
-      - name: Build
-        run: go build -v
-      - name: Test
-        run: go test -v
-      - name: Build backend
-        run: (cd cmd/backend; go build -v)
+    - uses: actions/checkout@v3
+    - name: Set up Go environment
+      run: |
+        export GOPATH=$HOME/go
+        export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
+      shell: bash
+    - name: Get dependencies
+      run: go get -v ./...
+    - name: Build
+      run: go build -v
+    - name: Test
+      run: go test -v
+    - name: Build backend
+      run: (cd cmd/backend; go build -v)
